--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,22 @@
     <link rel="stylesheet" href="style/style.css">
     <link rel="shortcut icon" href="assets/assignment-icon.png" type="image/x-icon">
 </head>
+
 <body>
-    
+    <header>
+        <nav>
+            <h3>Awlad.H</h3>
+            <button>Download Resume</button>
+        </nav>
+
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
+
 </body>
+
 </html>
