Banner section complete but need some polishing

--- a/index.html
+++ b/index.html
@@ -15,9 +15,22 @@
             <h3>Awlad.H</h3>
             <button>Download Resume</button>
         </nav>
-
     </header>
     <main>
+        <!-- Banner section starts here -->
+        <section>
+            <div class="banner-section">
+                <div class="banner-container">
+                    <div class="web-icon">
+                        <img src="assets/Group.png" alt="">
+                    </div>
+                    <p class="banner-title">"In the near future, I hope to become a<br>Developer."</p>
+                    <p class="banner-description">“Great web design without functionality is like a sports car with no
+                        engine.”</p>
+                    <button class="btn-1">Contact with me</button>
+                </div>
+            </div>
+        </section>
 
     </main>
     <footer>
