--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <h3>Awlad.H</h3>
-            <button>Download Resume</button>
+            <button class="download-resume">Download Resume</button>
         </nav>
     </header>
     <main>
@@ -31,7 +31,47 @@
                 </div>
             </div>
         </section>
-
+        <!-- Why web development section starts here -->
+        <section>
+            <div class="web-section">
+                <div class="web-container">
+                    <div class="web-section-1">
+                        <div class="web-heading">
+                            <div class="web-heading-1">
+                                <h2 class="why-webdevelopment">Why Web Development??</h2>
+                                <p class="why-webdevelopment-description">Working as a Web Developer also offers you a
+                                    lot of flexibility.</p>
+                            </div>
+                            <div class="section-1">
+                                <h6>I Will Do Coding and Change The World</h6>
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                                <button class="learn-more-button">Learn More</button>
+                                <img src="assets/Layer_1.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Inspiration section starts here -->
+        <section>
+            <div class="inspiration-section">
+                <div class="inspiration-heading">
+                    <p class="inspiration-title">My Inspiration</p>
+                    <p class="inspitation-description">Lorem Ipsum is simply dummy text of the printing and typesetting
+                        industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                </div>
+                <div class="video-section">
+                    <div class="youtube-video">
+                        <iframe width="1080" height="550"
+                            src="https://www.youtube.com/embed/DGHn2uOAVCE?si=ahctborjP3NyQWtW"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
