Skills section completed

--- a/index.html
+++ b/index.html
@@ -72,6 +72,42 @@
                 </div>
             </div>
         </section>
+        <!-- Skills section starts here -->
+        <section>
+            <div class="skills-section">
+                <div class="skills-title">
+                    <h2 class="skill-title">My Current Target</h2>
+                    <p class="skill-description">Lorem Ipsum is simply dummy text of the printing and typesetting
+                        industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                </div>
+                <div class="skill-main-card">
+                    <div class="skill-card">
+                        <div class="skill-position">
+                            <img class="image-positon" src="assets/html.png" alt="">
+                            <h2 class="image-title">HTML</h2>
+                            <p class="image-description">Lorem Ipsum is simply dummy text of the printing.</p>
+                            <a class="image-link" href="https://www.w3schools.com/html/" target="_blank">Learn More</a>
+                        </div>
+                    </div>
+                    <div class="skill-card" style="background-color: #004CE80D;">
+                        <div class="skill-position">
+                            <img class="image-positon" src="assets/css.png" alt="">
+                            <h2 class="image-title">CSS</h2>
+                            <p class="image-description">Lorem Ipsum is simply dummy text of the printing.</p>
+                            <a class="image-link" href="https://www.w3schools.com/css/" target="_blank">Learn More</a>
+                        </div>
+                    </div>
+                    <div class="skill-card" style="background-color: #FFDF000D;">
+                        <div class="skill-position">
+                            <img class="image-positon" src="assets/js.png" alt="">
+                            <h2 class="image-title">JavaScript</h2>
+                            <p class="image-description">Lorem Ipsum is simply dummy text of the printing.</p>
+                            <a class="image-link" href="https://www.w3schools.com/js/" target="_blank">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
