--- a/index.html
+++ b/index.html
@@ -108,6 +108,17 @@
                 </div>
             </div>
         </section>
+        <!-- Support section starts here -->
+        <section>
+            <div class="support-section">
+                <div class="support-position">
+                    <h2 class="support-title">I need Support</h2>
+                    <p class="support-description">Lorem Ipsum is simply dummy text of the printing and typesetting
+                        industry.</p>
+                    <input class="support-seggestion" type="text" placeholder="Suggest me any feedback for me"> <input type="submit" value="Submit">
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
