Support section need some work on border section

--- a/index.html
+++ b/index.html
@@ -115,7 +115,10 @@
                     <h2 class="support-title">I need Support</h2>
                     <p class="support-description">Lorem Ipsum is simply dummy text of the printing and typesetting
                         industry.</p>
-                    <input class="support-seggestion" type="text" placeholder="Suggest me any feedback for me"> <input type="submit" value="Submit">
+                </div>
+                <div class="reach-out">
+                    <input class="support-seggestion" type="text" placeholder="Suggest me any feedback for me">
+                    <input class="submit-button" type="submit" value="Submit">
                 </div>
             </div>
         </section>
