--- a/index.html
+++ b/index.html
@@ -124,6 +124,15 @@
         </section>
     </main>
     <footer>
+        <!-- Footer section starts here -->
+        <div class="footer-position">
+            <p class="footer-description">An Open Commitment by Awlad Hossain</p>
+            <div class="social-link">
+                <img src="assets/facebook.png" alt="">
+                <img src="assets/github.png" alt="">
+                <img src="assets/linkedin-icon 1.png" alt="">
+            </div>
+        </div>
 
     </footer>
 
