--- a/index.html
+++ b/index.html
@@ -128,9 +128,13 @@
         <div class="footer-position">
             <p class="footer-description">An Open Commitment by Awlad Hossain</p>
             <div class="social-link">
-                <img src="assets/facebook.png" alt="">
-                <img src="assets/github.png" alt="">
-                <img src="assets/linkedin-icon 1.png" alt="">
+                <a href="https://www.facebook.com/profile.php?id=100080255868569" target="_blank"><img
+                        class="social-image-1" src="assets/facebook.png" alt=""></a>
+
+                <a href="https://github.com/webdiv-rakib" target="_blank"></a><img class="social-image-2"
+                    src="assets/github.png" alt="">
+                <a href="https://www.linkedin.com/in/abu-nayim-mohammad-rakib-b24631317/" target="_blank"></a><img
+                    class="social-image-3" src="assets/linkedin-icon 1.png" alt="">
             </div>
         </div>
 
