--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
                 <a href="https://www.facebook.com/profile.php?id=100080255868569" target="_blank"><img
                         class="social-image-1" src="assets/facebook.png" alt=""></a>
 
-                <a href="https://github.com/webdiv-rakib" target="_blank"></a><img class="social-image-2"
-                    src="assets/github.png" alt="">
-                <a href="https://www.linkedin.com/in/abu-nayim-mohammad-rakib-b24631317/" target="_blank"></a><img
-                    class="social-image-3" src="assets/linkedin-icon 1.png" alt="">
+                <a href="https://github.com/webdiv-rakib" target="_blank"><img class="social-image-2"
+                        src="assets/github.png" alt=""></a>
+                <a href="https://www.linkedin.com/in/abu-nayim-mohammad-rakib-b24631317/" target="_blank"><img
+                        class="social-image-3" src="assets/linkedin-icon 1.png" alt=""></a>
             </div>
         </div>
 
