Contact with me button now working

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <p class="banner-title">"In the near future, I hope to become a<br>Developer."</p>
                     <p class="banner-description">“Great web design without functionality is like a sports car with no
                         engine.”</p>
-                    <button class="btn-1">Contact with me</button>
+                    <a href="#footer"><button class="btn-1">Contact with me</button></a>
                 </div>
             </div>
         </section>
@@ -123,7 +123,7 @@
             </div>
         </section>
     </main>
-    <footer>
+    <footer id="footer">
         <!-- Footer section starts here -->
         <div class="footer-position">
             <p class="footer-description">An Open Commitment by Awlad Hossain</p>
