Web dev section almost done but need some polishing

--- a/index.html
+++ b/index.html
@@ -32,21 +32,44 @@
             </div>
         </section>
         <!-- Why web development section starts here -->
-        <section>
-            <div class="web-section">
-                <div class="web-container">
-                    <div class="web-section-1">
-                        <div class="web-heading">
-                            <div class="web-heading-1">
-                                <h2 class="why-webdevelopment">Why Web Development??</h2>
-                                <p class="why-webdevelopment-description">Working as a Web Developer also offers you a
-                                    lot of flexibility.</p>
-                            </div>
-                            <div class="section-1">
-                                <h6>I Will Do Coding and Change The World</h6>
+        <section id="web-section">
+            <div class="web-section-1">
+                <div class="web-section-2">
+                    <div class="web-dev">
+                        <h2 class="web-dev-title">Why Web Development??</h2>
+                        <p class="web-dev-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                            the industry's standard dummy text.</p>
+                    </div>
+                    <div class="web-parent">
+                        <div class="web-card">
+                            <div class="web-description">
+                                <h3>I will Do Coding and Change The World</h3>
                                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                                 <button class="learn-more-button">Learn More</button>
+                            </div>
+                            <div>
                                 <img src="assets/Layer_1.png" alt="">
+                            </div>
+                        </div>
+                        <div class="web-card">
+                            <div class="web-description">
+                                <img src="assets/Group 3.png" alt="">
+                            </div>
+                            <div>
+    
+                                <h3>I will Do Coding and Change The World</h3>
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                                <button class="learn-more-button">Learn More</button>
+                            </div>
+                        </div>
+                        <div class="web-card">
+                            <div class="web-description">
+                                <h3>I will Do Coding and Change The World</h3>
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                                <button class="learn-more-button">Learn More</button>
+                            </div>
+                            <div>
+                                <img src="assets/Group 4.png" alt="">
                             </div>
                         </div>
                     </div>
