--- a/index.html
+++ b/index.html
@@ -37,14 +37,13 @@
                 <div class="web-section-2">
                     <div class="web-dev">
                         <h2 class="web-dev-title">Why Web Development??</h2>
-                        <p class="web-dev-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                            the industry's standard dummy text.</p>
+                        <p class="web-dev-description">Web development is a fast-paced and challenging career, centered on creative problem-solving and continuous innovation.</p>
                     </div>
                     <div class="web-parent">
                         <div class="web-card">
                             <div class="web-description">
-                                <h3>I will Do Coding and Change The World</h3>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                                <h3 class="web-card-title">Learn Web Development Fundamentals</h3>
+                                <p class="web-card-title-description">The best first step to becoming a Web Developer is to start learning web development fundamentals</p>
                                 <button class="learn-more-button">Learn More</button>
                             </div>
                             <div>
@@ -52,20 +51,21 @@
                             </div>
                         </div>
                         <div class="web-card">
-                            <div class="web-description">
+                            <div>
                                 <img src="assets/Group 3.png" alt="">
                             </div>
-                            <div>
-    
-                                <h3>I will Do Coding and Change The World</h3>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <div class="web-description">
+                                <h3 class="web-card-title">Choose a Development Specialization</h3>
+                                <p class="web-card-title-description"> All Web Developers are categorized into three main types.
+                                    1.Front-End 2.Back-End 3.Full-Stack
+                                </p>
                                 <button class="learn-more-button">Learn More</button>
                             </div>
                         </div>
                         <div class="web-card">
                             <div class="web-description">
-                                <h3>I will Do Coding and Change The World</h3>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                                <h3 class="web-card-title">Learn Key Programming Languages for Web Development</h3>
+                                <p class="web-card-title-description">Three families of programming languages form the basic tools involved in virtually all aspects of web development: 1.HTML 2.CSS 3.JavaScript</p>
                                 <button class="learn-more-button">Learn More</button>
                             </div>
                             <div>
@@ -81,8 +81,7 @@
             <div class="inspiration-section">
                 <div class="inspiration-heading">
                     <p class="inspiration-title">My Inspiration</p>
-                    <p class="inspitation-description">Lorem Ipsum is simply dummy text of the printing and typesetting
-                        industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                    <p class="inspitation-description">They are a trigger for investigating the techniques that push boundaries, unlock hidden potential and expand skill set.</p>
                 </div>
                 <div class="video-section">
                     <div class="youtube-video">
@@ -100,15 +99,14 @@
             <div class="skills-section">
                 <div class="skills-title">
                     <h2 class="skill-title">My Current Target</h2>
-                    <p class="skill-description">Lorem Ipsum is simply dummy text of the printing and typesetting
-                        industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                    <p class="skill-description">My current target is to learn HTML, CSS and JavaScript after that to became web developer</p>
                 </div>
                 <div class="skill-main-card">
                     <div class="skill-card">
                         <div class="skill-position">
                             <img class="image-positon" src="assets/html.png" alt="">
                             <h2 class="image-title">HTML</h2>
-                            <p class="image-description">Lorem Ipsum is simply dummy text of the printing.</p>
+                            <p class="image-description">HTML is the standard markup language for Web pages.</p>
                             <a class="image-link" href="https://www.w3schools.com/html/" target="_blank">Learn More</a>
                         </div>
                     </div>
@@ -116,7 +114,7 @@
                         <div class="skill-position">
                             <img class="image-positon" src="assets/css.png" alt="">
                             <h2 class="image-title">CSS</h2>
-                            <p class="image-description">Lorem Ipsum is simply dummy text of the printing.</p>
+                            <p class="image-description">CSS is the language we use to style an HTML document.</p>
                             <a class="image-link" href="https://www.w3schools.com/css/" target="_blank">Learn More</a>
                         </div>
                     </div>
@@ -124,7 +122,7 @@
                         <div class="skill-position">
                             <img class="image-positon" src="assets/js.png" alt="">
                             <h2 class="image-title">JavaScript</h2>
-                            <p class="image-description">Lorem Ipsum is simply dummy text of the printing.</p>
+                            <p class="image-description">JavaScript is the world's most popular programming language.</p>
                             <a class="image-link" href="https://www.w3schools.com/js/" target="_blank">Learn More</a>
                         </div>
                     </div>
@@ -136,8 +134,7 @@
             <div class="support-section">
                 <div class="support-position">
                     <h2 class="support-title">I need Support</h2>
-                    <p class="support-description">Lorem Ipsum is simply dummy text of the printing and typesetting
-                        industry.</p>
+                    <p class="support-description">If you had any suggestion about improving my skills inbox me right way</p>
                 </div>
                 <div class="reach-out">
                     <input class="support-seggestion" type="text" placeholder="Suggest me any feedback for me">
