--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav>
-            <h3>Awlad.H</h3>
+            <h3>Rakib.H</h3>
             <button class="download-resume">Download Resume</button>
         </nav>
     </header>
@@ -37,13 +37,15 @@
                 <div class="web-section-2">
                     <div class="web-dev">
                         <h2 class="web-dev-title">Why Web Development??</h2>
-                        <p class="web-dev-description">Web development is a fast-paced and challenging career, centered on creative problem-solving and continuous innovation.</p>
+                        <p class="web-dev-description">Web development is a fast-paced and challenging career, centered
+                            on creative problem-solving and continuous innovation.</p>
                     </div>
                     <div class="web-parent">
                         <div class="web-card">
                             <div class="web-description">
                                 <h3 class="web-card-title">Learn Web Development Fundamentals</h3>
-                                <p class="web-card-title-description">The best first step to becoming a Web Developer is to start learning web development fundamentals</p>
+                                <p class="web-card-title-description">The best first step to becoming a Web Developer is
+                                    to start learning web development fundamentals</p>
                                 <button class="learn-more-button">Learn More</button>
                             </div>
                             <div>
@@ -56,7 +58,8 @@
                             </div>
                             <div class="web-description">
                                 <h3 class="web-card-title">Choose a Development Specialization</h3>
-                                <p class="web-card-title-description"> All Web Developers are categorized into three main types.
+                                <p class="web-card-title-description"> All Web Developers are categorized into three
+                                    main types.
                                     1.Front-End 2.Back-End 3.Full-Stack
                                 </p>
                                 <button class="learn-more-button">Learn More</button>
@@ -65,7 +68,9 @@
                         <div class="web-card">
                             <div class="web-description">
                                 <h3 class="web-card-title">Learn Key Programming Languages for Web Development</h3>
-                                <p class="web-card-title-description">Three families of programming languages form the basic tools involved in virtually all aspects of web development: 1.HTML 2.CSS 3.JavaScript</p>
+                                <p class="web-card-title-description">Three families of programming languages form the
+                                    basic tools involved in virtually all aspects of web development: 1.HTML 2.CSS
+                                    3.JavaScript</p>
                                 <button class="learn-more-button">Learn More</button>
                             </div>
                             <div>
@@ -81,7 +86,8 @@
             <div class="inspiration-section">
                 <div class="inspiration-heading">
                     <p class="inspiration-title">My Inspiration</p>
-                    <p class="inspitation-description">They are a trigger for investigating the techniques that push boundaries, unlock hidden potential and expand skill set.</p>
+                    <p class="inspitation-description">They are a trigger for investigating the techniques that push
+                        boundaries, unlock hidden potential and expand skill set.</p>
                 </div>
                 <div class="video-section">
                     <div class="youtube-video">
@@ -99,7 +105,8 @@
             <div class="skills-section">
                 <div class="skills-title">
                     <h2 class="skill-title">My Current Target</h2>
-                    <p class="skill-description">My current target is to learn HTML, CSS and JavaScript after that to became web developer</p>
+                    <p class="skill-description">My current target is to learn HTML, CSS and JavaScript after that to
+                        became web developer</p>
                 </div>
                 <div class="skill-main-card">
                     <div class="skill-card">
@@ -122,7 +129,8 @@
                         <div class="skill-position">
                             <img class="image-positon" src="assets/js.png" alt="">
                             <h2 class="image-title">JavaScript</h2>
-                            <p class="image-description">JavaScript is the world's most popular programming language.</p>
+                            <p class="image-description">JavaScript is the world's most popular programming language.
+                            </p>
                             <a class="image-link" href="https://www.w3schools.com/js/" target="_blank">Learn More</a>
                         </div>
                     </div>
@@ -134,7 +142,8 @@
             <div class="support-section">
                 <div class="support-position">
                     <h2 class="support-title">I need Support</h2>
-                    <p class="support-description">If you had any suggestion about improving my skills inbox me right way</p>
+                    <p class="support-description">If you had any suggestion about improving my skills inbox me right
+                        way</p>
                 </div>
                 <div class="reach-out">
                     <input class="support-seggestion" type="text" placeholder="Suggest me any feedback for me">
@@ -146,7 +155,7 @@
     <footer id="footer">
         <!-- Footer section starts here -->
         <div class="footer-position">
-            <p class="footer-description">An Open Commitment by Awlad Hossain</p>
+            <p class="footer-description">An Open Commitment by Rakibul Hassan</p>
             <div class="social-link">
                 <a href="https://www.facebook.com/profile.php?id=100080255868569" target="_blank"><img
                         class="social-image-1" src="assets/facebook.png" alt=""></a>
